--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-native-gradient-header": "^0.2.1",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.1",
+    "react-native-ratings": "^7.4.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
