--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/material-top-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-av": "~8.7.0",
